// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedSystems component renders correctly when scoringweight equal & names equal 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--alabaster__aPSpj"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root Section-module_title__sia8j title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test\\"}"
                href="/en/s/test"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 1
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-101 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-104"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with no systems 1`] = `<div />`;

exports[`RelatedSystems component renders correctly with scoringweight 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--alabaster__aPSpj"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root Section-module_title__sia8j title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test\\"}"
                href="/en/s/test"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 1
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-64"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 2 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test2\\"}"
                href="/en/s/test2"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 2
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-64"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal & names sorted opposite 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--alabaster__aPSpj"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root Section-module_title__sia8j title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test2\\"}"
                href="/en/s/test2"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 1
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-124"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 2 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test\\"}"
                href="/en/s/test"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 2
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-124"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--alabaster__aPSpj"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root Section-module_title__sia8j title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test\\"}"
                href="/en/s/test"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 1
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-81 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-84"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 2 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test2\\"}"
                href="/en/s/test2"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 2
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-81 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-84"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with systems 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--alabaster__aPSpj"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root Section-module_title__sia8j title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test\\"}"
                href="/en/s/test"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 1
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-4"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly without categories 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--alabaster__aPSpj"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root Section-module_title__sia8j title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test\\"}"
                href="/en/s/test"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 1
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-24"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders systems correctly without classifications 1`] = `
<div>
  <div
    class="Section-module_Section__yrYL2 Section-module_Section--alabaster__aPSpj"
  >
    <div
      class="Container-module_Container__4e9IW"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="RelatedSystems"
        >
          <h2
            class="MuiTypography-root Section-module_title__sia8j title Typography-module_Typography__aA2Zb Typography-module_Typography--underline__iJdDs MuiTypography-h2"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root Grid-module_item__XHgjM MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root OverviewCard-module_OverviewCard__eOihI OverviewCard-module_OverviewCard--clickable__r8kzu"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"NO System 1 - MC: sdp.system.readMore\\",\\"action\\":\\"/en/s/test\\"}"
                href="/en/s/test"
                role="button"
                tabindex="0"
              >
                <div
                  class="OverviewCard-module_body__ECyj2"
                >
                  <h5
                    class="MuiTypography-root OverviewCard-module_title__k9QGa OverviewCard-module_title--no-brand-logo__hEhnZ Typography-module_Typography__aA2Zb MuiTypography-h5"
                  >
                    NO System 1
                  </h5>
                  <div
                    class="OverviewCard-module_children__nvFGE OverviewCard-module_text__fHseA"
                  >
                    SDescription 1 NO
                  </div>
                  <div
                    class="OverviewCard-module_footer__MMw-Y"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-outlined MuiButton-outlinedPrimary"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label buttonStyles-label-44"
                      >
                        MC: sdp.system.readMore
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
